--- a/My_First_Notebook.ipynb
+++ b/My_First_Notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "My First Notebook",
       "provenance": [],
-      "authorship_tag": "ABX9TyOOdNV/ODPTfBGpbdr8w9gP",
+      "authorship_tag": "ABX9TyPyMCElfJXv/+C7KYI/yVUQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f_NPHLx0L8my",
-        "outputId": "bddd2885-fd42-4252-d2c2-ee206fca7201"
+        "outputId": "ea41a5be-cfaf-424f-c0d7-e3ced5d47983"
       },
       "source": [
         "#This is some example python code \r\n",
@@ -60,15 +60,18 @@
         "\r\n",
         "print(\"Hello World!\")\r\n",
         "x = 5+1\r\n",
-        "print(x)\r\n"
+        "print(x)\r\n",
+        "\r\n",
+        "print(\"This is my first remote repository. I saved my notebook to GitHub.\")\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Hello World!\n",
-            "6\n"
+            "6\n",
+            "This is my first remote repository. I saved my notebook to GitHub.\n"
           ],
           "name": "stdout"
         }
